Updated phone number

--- a/shop/templates/shop/contact.html
+++ b/shop/templates/shop/contact.html
@@ -88,11 +88,11 @@
             
             <div class="info-item">
                 <span class="info-label">WhatsApp / Phone</span>
-                <span class="info-value">+91 99999 99999</span> </div>
+                <span class="info-value">+91 9061699349</span> </div>
 
             <div class="info-item">
                 <span class="info-label">Email</span>
-                <span class="info-value">hello@mamis-pickles.com</span>
+                <span class="info-value">mamisfoodproduction@gmail.com</span>
             </div>
 
             <div class="info-item">
